--- a/src/components/common/Card/FeatureCard/styles.module.scss
+++ b/src/components/common/Card/FeatureCard/styles.module.scss
@@ -1,7 +1,8 @@
 :global(.MuiCard-root).card {
-    min-width: 200px;
-    max-width: 200px;
-    height: 200px;
+    min-width: 300px;
+    max-width: 300px;
+    height: 150px;
+    background-color: #8f8f8f;
     color: white;
     border-radius: 8px;
     overflow: hidden;
@@ -31,9 +32,9 @@
     text-align: center;
 }
 
-.title {
-    font-size: 1.1rem;
-    font-weight: 600;
+:global(.MuiTypography-root).title {
+    font-size: 14px;
+    font-weight: 700;
     margin-bottom: 8px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -43,7 +44,7 @@
     -webkit-box-orient: vertical;
 }
 
-.description {
+:global(.MuiTypography-root).description {
     font-size: 0.875rem;
     line-height: 1.4;
     overflow: hidden;
