--- a/src/components/common/Card/TopicCard/styles.module.scss
+++ b/src/components/common/Card/TopicCard/styles.module.scss
@@ -2,6 +2,7 @@
     min-width: 200px;
     max-width: 200px;
     height: 320px;
+    background-color: #8f8f8f;
     color: white;
     border-radius: 8px;
     overflow: hidden;
