--- a/src/components/creator/QuestionView/styles.module.scss
+++ b/src/components/creator/QuestionView/styles.module.scss
@@ -3,18 +3,15 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
-  background-image: linear-gradient(to bottom, #baa5b9, #d8ccd6);
   position: relative;
-  min-height: 100vh;
+  height: 90vh;
   overflow: auto;
-  padding-bottom: 60px;
 }
 
 .questionTitle {
   width: 100%;
-  max-width: 960px;
-  margin: 20px auto;
+  max-width: 880px;
+  margin: 10px auto;
   background-color: white;
   padding: 16px;
   border-radius: 4px;
@@ -30,12 +27,12 @@
 
 .imageContainer {
   width: 100%;
-  max-width: 700px;
-  max-height: 350px;
+  max-width: 400px;
+  max-height: 300px;
   overflow: hidden;
   border-radius: 4px;
   position: relative;
-  margin-bottom: 24px;
+  margin-bottom: 10px;
   z-index: 5;
 }
 
@@ -76,7 +73,7 @@
 .answersContainer {
   width: 100%;
   max-width: 900px;
-  padding: 0 16px;
+  padding: 0 20px;
   z-index: 5;
 }
 
@@ -88,7 +85,7 @@
   cursor: pointer;
   position: relative;
   color: white;
-  padding: 0 16px;
+  padding: 0 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.2s ease;
   padding-right: 10px;
