feat: Add new components and styles for Creator, Detail, Home, and Library pages
- Implemented Topbar component with styles for the Creator page.
- Created ActionBar component for the Detail page with responsive styles.
- Developed QuestionCard component to display quiz questions and answers.
- Added PromoBannerCard component to enhance the Home page with promotional content.
- Introduced FeatureCarousel and QuizCarousel components for showcasing features and quizzes.
- Implemented TopicCarousel for navigating through different topics.
- Created MyQuizList component to display a list of quizzes in the Library.
- Added answer service for handling API requests related to answers.
- Set up API service with axios for making HTTP requests and handling authentication.

--- a/src/components/layout/MainLayout/styles.module.scss
+++ b/src/components/layout/MainLayout/styles.module.scss
@@ -13,4 +13,7 @@
 .mainContent {
     width: calc(100% - 250px);
     padding: 10px;
+    @media screen and (max-width: 1000px) {
+    width: 100%;
+  }
 }
