--- a/src/pages/Creator/components/Topbar/styles.module.scss
+++ b/src/pages/Creator/components/Topbar/styles.module.scss
@@ -76,22 +76,14 @@
 
 :global(.MuiButton-root).actionButton {
     text-transform: none;
-    color: #333;
+    color: #646cff;
 }
 
 :global(.MuiButton-root).playButton {
-    background-color: #1368ce;
-    color: white;
     text-transform: none;
-
-    &:hover {
-        background-color: #1368ce;
-    }
 }
 
 :global(.MuiButton-root).saveButton {
-    background-color: #0066ff;
-    color: white;
     text-transform: none;
 }
 
