--- a/src/pages/LobbySync/styles.module.scss
+++ b/src/pages/LobbySync/styles.module.scss
@@ -37,20 +37,23 @@
     font-size: 24px !important;
     font-weight: bold !important;
     color: #fff;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.7);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
 .topRightControls {
     display: flex;
     align-items: center;
     gap: 10px;
+
     :global(.MuiIconButton-root) {
         background-color: rgba(0, 0, 0, 0.5);
         color: #fff;
+
         &:hover {
             background-color: rgba(0, 0, 0, 0.7);
         }
     }
+
     .languageButton {
         padding: 6px 12px;
         font-weight: bold;
@@ -65,8 +68,8 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 60px;
-    margin-bottom: 200px;
+    margin-top: 5%;
+    margin-bottom: 25%;
 }
 
 :global(.MuiCard-root).questionSetCard {
@@ -87,13 +90,16 @@
 
 .questionSetContent {
     width: 100%;
+
     .countdownButton {
         background-color: #646cff !important;
         color: white !important;
+
         strong {
             font-weight: 700;
         }
     }
+
     .gameInfo {
         display: flex;
         justify-content: space-between;
@@ -106,11 +112,11 @@
 }
 
 
-.kahootBranding {
+.branding {
     font-size: 60px !important;
     font-weight: bold !important;
     color: #fff;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .playersDisplay {
@@ -144,7 +150,7 @@
     gap: 15px;
     width: auto;
     max-width: 450px;
-    box-shadow: 0px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 :global(.MuiTypography-root).joinGameTitle {
@@ -159,28 +165,58 @@
     display: flex;
     gap: 10px;
     width: 100%;
+
     :global(.MuiTextField-root) {
         flex-grow: 1;
+
         :global(.MuiInputBase-root) {
             background-color: #fff;
             border-radius: 4px;
         }
+
         label {
             color: #c4c4c4;
             font-weight: 700;
         }
+
         input {
             color: rgb(51, 51, 51);
             font-weight: 700;
         }
     }
+
     :global(.MuiButton-root) {
         background-color: #646cff;
         color: #ffffff;
-        font-weight: bold;
+        font-weight: 700;
         padding: 10px 20px;
+
         &:hover {
             background-color: #5555cc;
         }
+    }
+}
+
+.hostControls {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.startGameButton {
+    background-color: #646cff;
+    color: #ffffff;
+    font-weight: bold;
+    padding: 10px 20px;
+    height: 50px;
+    width: 100%;
+
+    &:hover {
+        background-color: #5555cc;
     }
 }
