Chức năng quản lý người dùng

--- a/src/pages/Report/styles.module.scss
+++ b/src/pages/Report/styles.module.scss
@@ -120,12 +120,9 @@
   align-items: center;
   justify-content: right;
   gap: 5px;
+  height: 100%;
   svg {
     color: #1976d2;
-  }
-  .MuiTypography-root {
-    font-weight: 500;
-    font-size: 15px;
   }
 }
 
