--- a/src/components/layout/Topbar/styles.module.scss
+++ b/src/components/layout/Topbar/styles.module.scss
@@ -48,10 +48,11 @@
     }
 
     .avatar {
-        width: 32px;
-        height: 32px;
+        width: 40px;
+        height: 40px;
         cursor: pointer;
         transition: transform 0.2s;
+        border: 2px solid #1976d2;
 
         &:hover {
             transform: scale(1.05);
